--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>AI and Art | Wing Pang</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this website.</noscript>
     <div id="root"></div>
   </body>
 </html>
